--- a/src/components/app/app.module.css
+++ b/src/components/app/app.module.css
@@ -4,4 +4,9 @@
   height: 100vh;
   background-color: #131316;
   color: #f2f2f3;
+  /* max-width: 100%; */
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  box-sizing: border-box;
 }
