--- a/src/components/app/app.module.css
+++ b/src/components/app/app.module.css
@@ -6,7 +6,8 @@
   color: #f2f2f3;
   /* max-width: 100%; */
   width: 100%;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
+  padding: 40px;
 }
