--- a/src/components/app-header/app-header.module.css
+++ b/src/components/app-header/app-header.module.css
@@ -13,8 +13,8 @@
 }
 
 .logo {
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 132px;
+  margin-right: 289px;
   box-sizing: border-box;
 }
 
