--- a/src/components/card/card.module.css
+++ b/src/components/card/card.module.css
@@ -1,13 +1,8 @@
-.cards {
-  list-style: none;
-  display: grid;
-  box-sizing: border-box;
-  inline-size: 100%;
-  grid-template-columns: 1fr 1fr;
-  grid-auto-rows: 208px;
-  column-gap: 24px;
-  row-gap: 32px;
+.subtitle {
+  font-size: 24px;
+  font-weight: 700;
   margin: 0;
+  line-height: 30px;
 }
 
 .card {
@@ -16,9 +11,7 @@
   align-items: center;
 }
 
-.subtitle {
-  font-weight: 700;
-  font-size: 24px;
-  line-height: 30px;
-  margin: 0;
+.price {
+  display: flex;
+  align-items: center;
 }
