--- a/src/components/burger-constructor/burger-constructor.module.css
+++ b/src/components/burger-constructor/burger-constructor.module.css
@@ -30,3 +30,18 @@
   left: 5px;  
 }
 
+.price {
+  display: flex;
+  align-items: center;
+  font-family: 'Iceland';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 48px;
+  line-height: 36px;
+  margin-left: auto;
+}
+
+.priceIcon {
+  width: 33px;
+  height: 33px;
+}
