--- a/src/components/modal/modal.module.css
+++ b/src/components/modal/modal.module.css
@@ -1,9 +1,7 @@
 .modal {
   display: flex;
-  margin: auto;
   position: relative;
-  z-index: 5;
-
+  z-index: 3;
   border: 1px solid rgba(76, 76, 255, 0.2);
   background: #1C1C21;
   box-shadow: 0px 24px 32px rgba(0, 0, 0, 0.04), 0px 16px 24px rgba(0, 0, 0, 0.04), 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 0px 1px rgba(0, 0, 0, 0.04);
@@ -22,4 +20,14 @@
   background: transparent center/cover no-repeat;
   width: 18px;
   height: 18px;
+  z-index: 3;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.closeButton svg {
+  transform: scale(3.5);
+  
 }
