--- a/src/components/app/app.module.css
+++ b/src/components/app/app.module.css
@@ -1,7 +1,13 @@
 .app {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  /* height: 100vh; */
   background-color: #131316;
   color: #f2f2f3;
+  /* max-width: 100%; */
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  padding: 40px;
 }
