--- a/src/components/modal/modal.module.css
+++ b/src/components/modal/modal.module.css
@@ -1,3 +1,14 @@
+.modal-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 .modal {
   display: flex;
   position: relative;
