--- a/src/components/app-header/app-header.module.css
+++ b/src/components/app-header/app-header.module.css
@@ -1,4 +1,5 @@
 .header {
+  max-width: 1920px;
   width: 100%;
   height: 88px;
   background: #1C1C21;
@@ -10,12 +11,15 @@
   align-items: center;
   padding-left: 320px;
   padding-right: 320px;
+  
+  justify-content: space-between;
 }
 
 .logo {
-  margin-left: 132px;
-  margin-right: 289px;
+  /* margin-left: 132px;
+  margin-right: 289px; */
   box-sizing: border-box;
+
 }
 
 .nav {
