--- a/src/components/card/card.module.css
+++ b/src/components/card/card.module.css
@@ -10,9 +10,18 @@
   flex-direction: column;
   align-items: center;
   max-width: 272px;
+  position: relative;
 }
 
 .price {
   display: flex;
   align-items: center;
+}
+
+.counter {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 32px;
+  height: 32px;
 }
